<resources>
    <string name="app_name">Training Companion</string>
    <string name="app_icon_grey">GreyAppIcon</string>
    <string name="workouts">Workouts</string>
    <string name="workout">Workout</string>
    <string name="exercises">Exercises</string>
    <string name="settings">Settings</string>
    <string name="categories">Categories</string>
    <string name="app_name2">Companion</string>
    <string name="description_stub">description</string>
    <string name="add_workout">Add workout</string>
    <string name="category">Category</string>
    <string name="exercise_count">Exercises</string>
    <string name="duration">Duration</string>
    <string name="time">Time</string>
    <string name="info">Info</string>
    <string name="exercise">Exercise</string>
    <string name="healthcheck">Health check</string>
    <string name="reset_data">Reset data</string>
    <string name="schedules">Schedules</string>
    <string name="days">Days</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="schedule">Schedule</string>
    <string name="add_exercise">Add exercise</string>
    <string name="name">Name</string>
    <string name="mixed">Mixed</string>
    <string name="delete_exercise">Delete exercise</string>
    <string name="edit_exercise">Edit exercise</string>
    <string name="reset_user_data">Reset user data</string>
    <string name="reset_default_data">Reset default data</string>
    <string name="heartRateMonitor">Heart Rate Monitor</string>
    <string name="heartRate">Heart rate</string>
    <string name="zero">0</string>
    <string name="results">Results</string>
    <string name="temp">temp</string>
    <string name="delete_workout">Delete workout</string>
    <string name="edit_workout">Edit workout</string>
    <string name="select_exercises">Select exercises</string>
    <string name="use_built_in_sensors">Use Built-in Sensors</string>
    <string name="connection">Connection</string>
    <string name="age">Age</string>
    <string name="save">Save</string>
    <string name="sex">Sex</string>
    <string name="weight">Weight</string>
    <string name="height">Height</string>
    <string name="user_data">User data:</string>
    <string name="history">History</string>
    <string name="max">Max</string>
    <string name="avg">Avg</string>
    <string name="min">Min</string>
    <string name="calories">Cal</string>
    <string name="zero_time">00:00</string>
    <string name="summary">Workout summary</string>
    <string name="variance">Variance</string>
    <string name="arrhythmias">Arrhythmias</string>
    <string name="intensity">Intensity</string>
    <string name="stress">Stress</string>
    <string name="bmr">BMR</string>
    <string name="tdee">TDEE</string>
    <string name="caloriess">Calories</string>
    <string name="press_to_start_recording">Press to start HR monitor</string>
    <string name="date">Date</string>
</resources>