<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation2"
    app:startDestination="@+id/nav_workouts">

    <fragment
        android:id="@+id/nav_workouts"
        android:name="com.example.trainingcompanion.ui.fragment.workouts.WorkoutsFragment"
        android:label="@string/workouts"
        tools:layout="@layout/fragment_workouts" />

    <fragment
        android:id="@+id/nav_exercises"
        android:name="com.example.trainingcompanion.ui.fragment.exercises.ExercisesFragment"
        android:label="@string/exercises"
        tools:layout="@layout/fragment_exercises" />

    <fragment
        android:id="@+id/nav_settings"
        android:name="com.example.trainingcompanion.ui.fragment.SettingsFragment"
        android:label="@string/settings"
        tools:layout="@layout/fragment_settings" />
</navigation>