<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">


    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@android:color/transparent"
        app:cardCornerRadius="13pt"
        app:cardPreventCornerOverlap="false"
        app:cardUseCompatPadding="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <RelativeLayout
            android:id="@+id/historyLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="1dp"
            android:background="@color/dark_dark_grey"
            android:orientation="horizontal">


            <LinearLayout
                android:id="@+id/basicInfo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_marginStart="15dp"
                android:layout_marginTop="12dp"
                android:layout_marginBottom="12dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/date"
                    android:textColor="@color/white" />

                <TextView
                    android:id="@+id/historyTime"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="3dp"
                    android:layout_marginEnd="15dp"
                    android:text="@string/time"
                    android:textColor="@color/white" />


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:text="@string/category"
                    android:textColor="@color/white" />

                <TextView
                    android:id="@+id/historyWorkoutCategory"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="3dp"
                    android:text="@string/category"
                    android:textColor="@color/white" />


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:text="@string/duration"
                    android:textColor="@color/white" />

                <TextView
                    android:id="@+id/historyWorkoutTime"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="3dp"
                    android:text="@string/duration"
                    android:textColor="@color/white" />

            </LinearLayout>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="12dp"
                android:layout_marginBottom="12dp"
                android:layout_alignParentEnd="true"

                android:orientation="vertical">


                <TextView
                    android:id="@+id/historyWorkoutName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:text="@string/workout"
                    android:textColor="@color/white" />


                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/historyWorkoutName"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/border">

                    <TextView
                        android:id="@+id/heartRate"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="30dp"
                        android:text="@string/heartRate"
                        android:textColor="@color/white" />

                    <TextView
                        android:id="@+id/maxHR"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/heartRate"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="3dp"
                        android:layout_marginEnd="15dp"
                        android:text="@string/max"
                        android:textColor="@color/white" />

                    <TextView
                        android:id="@+id/maxHRtextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/heartRate"
                        android:layout_toEndOf="@+id/maxHR"
                        android:textColor="@color/white" />

                    <TextView
                        android:id="@+id/avgHR"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/maxHR"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="3dp"
                        android:layout_marginEnd="19dp"
                        android:text="@string/avg"
                        android:textColor="@color/white" />

                    <TextView
                        android:id="@+id/avgHRtextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/maxHR"
                        android:layout_toEndOf="@+id/avgHR"
                        android:textColor="@color/white" />

                    <TextView
                        android:id="@+id/minHR"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/avgHR"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="3dp"
                        android:layout_marginEnd="19dp"
                        android:text="@string/min"
                        android:textColor="@color/white" />

                    <TextView
                        android:id="@+id/minHRtextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/avgHR"
                        android:layout_toEndOf="@+id/minHR"
                        android:textColor="@color/white" />

                    <TextView
                        android:id="@+id/calories"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_toEndOf="@id/heartRate"
                        android:layout_marginTop="15dp"
                        android:text="@string/caloriess"
                        android:textColor="@color/white" />

                    <TextView
                        android:id="@+id/caloriesTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/calories"
                        android:layout_alignStart="@+id/calories"
                        android:layout_marginTop="15dp"
                        android:textColor="@color/white"
                        android:textSize="20sp" />

                </RelativeLayout>

            </RelativeLayout>
        </RelativeLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>