<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/super_dark_grey"
    tools:context=".MainActivity">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="65dp"
        android:layout_height="0dp"
        android:background="@color/dark_dark_grey"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageLogo"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginBottom="10dp"
            android:contentDescription="@string/app_icon_grey"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:srcCompat="@drawable/app_icon_grey" />

        <TextView
            android:id="@+id/textViewWorkout"
            android:layout_width="100dp"
            android:layout_height="120dp"
            android:layout_marginTop="100dp"
            android:gravity="center"
            android:rotation="270"
            android:text="@string/workouts"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textViewExcercises"
            android:layout_width="100dp"
            android:layout_height="120dp"
            android:gravity="center"
            android:rotation="270"
            android:text="@string/exercises"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@+id/textViewHistory"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewWorkout" />

        <TextView
            android:id="@+id/textViewHistory"
            android:layout_width="100dp"
            android:layout_height="120dp"
            android:gravity="center"
            android:rotation="270"
            android:text="@string/history"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@+id/textViewSettings"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewExcercises" />

        <TextView
            android:id="@+id/textViewSettings"
            android:layout_width="100dp"
            android:layout_height="120dp"
            android:layout_marginTop="100dp"
            android:gravity="center"
            android:rotation="270"
            android:text="@string/settings"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@+id/imageLogo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textViewExcercises" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/mainFragmentContainerView"
        android:name="com.example.trainingcompanion.ui.fragment.workouts.WorkoutsFragment"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/constraintLayout"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout="@layout/fragment_workouts" />


</androidx.constraintlayout.widget.ConstraintLayout>